--- a/config.json
+++ b/config.json
@@ -77,7 +77,11 @@
         "IsMobileVerified": true
       },
       "Apps": {
-            "Users.WebGuid.UserId": "52216b5a-f157-4a08-89c5-3d5c8ea3c75d",
+            "UserId": {
+                  "refTable": "Users",
+                  "refColumn": "WebGuid",
+                  "value": "52216b5a-f157-4a08-89c5-3d5c8ea3c75d"
+            },
             "ClientId": "f6c2aedd-8228-4c08-99b0-6ebd818b6371",
             "Secret": "exampleSecret123",
             "Name": "Login Link",
@@ -92,13 +96,21 @@
       },
       "Roles": [
           {
-            "Apps.ClientId.AppId": "f6c2aedd-8228-4c08-99b0-6ebd818b6371",
+            "AppId": {
+                  "refTable": "Apps",
+                  "refColumn": "ClientId",
+                  "value": "f6c2aedd-8228-4c08-99b0-6ebd818b6371"
+            },
             "InnerName": "root",
             "Name": "Root",
             "Description": "The highest level role with full access to all system resources and configurations."
           },
           {
-            "Apps.ClientId.AppId": "f6c2aedd-8228-4c08-99b0-6ebd818b6371",
+            "AppId": {
+                  "refTable": "Apps",
+                  "refColumn": "ClientId",
+                  "value": "f6c2aedd-8228-4c08-99b0-6ebd818b6371"
+            },
             "InnerName": "default",
             "Name": "Default",
             "Description": "A standard role with basic access permissions suitable for regular users."
