--- a/config.json
+++ b/config.json
@@ -87,6 +87,7 @@
             "ClientId": "f6c2aedd-8228-4c08-99b0-6ebd818b6371",
             "Secret": "exampleSecret123",
             "Name": "Login Link",
+            "Slug": "LoginLink",
             "TagLine": "authentication-authorization",
             "LogoUrl": "https://example.com/logo.png",
             "RedirectUrl": "https://example.com/redirect",
